@@ -103,13 +103,13 @@ public:
         return X86Registers::edi;
 #endif
     }
-    static constexpr unsigned numberOfRegisters() { return lastRegister() - firstRegister() + 1; }
+    static constexpr unsigned numberOfRegisters() { return static_cast<uint8_t>(lastRegister()) - static_cast<uint8_t>(firstRegister()) + 1; }
     
     typedef X86Registers::SPRegisterID SPRegisterID;
 
     static constexpr SPRegisterID firstSPRegister() { return X86Registers::eip; }
     static constexpr SPRegisterID lastSPRegister() { return X86Registers::eflags; }
-    static constexpr unsigned numberOfSPRegisters() { return lastSPRegister() - firstSPRegister() + 1; }
+    static constexpr unsigned numberOfSPRegisters() { return static_cast<uint8_t>(lastSPRegister()) - static_cast<uint8_t>(firstSPRegister()) + 1; }
     
     typedef X86Registers::XMMRegisterID XMMRegisterID;
     typedef XMMRegisterID FPRegisterID;
@@ -123,7 +123,7 @@ public:
         return X86Registers::xmm7;
 #endif
     }
-    static constexpr unsigned numberOfFPRegisters() { return lastFPRegister() - firstFPRegister() + 1; }
+    static constexpr unsigned numberOfFPRegisters() { return static_cast<uint8_t>(lastFPRegister()) - static_cast<uint8_t>(firstFPRegister()) + 1; }
     
     static const char* gprName(RegisterID id)
     {
